--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -319,9 +319,13 @@
             />
           </svg>
         </a>
+
       </div>
+
     </div>
+
   </div>
+  <app-table></app-table>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
