--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.profileImg{
+    border-radius: 50px;
+    box-shadow: black 2px -1px 10px 0px
+}
